--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.18.0 FATAL_ERROR)
 project(demo)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_C_STANDARD 99)
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
@@ -27,7 +28,10 @@ if (LINUX)
 	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -stdlib=libc++")
 endif(LINUX)
 
-file(GLOB_RECURSE SOURCES "src/*.*")
+file(GLOB_RECURSE
+	SOURCES
+		"src/main.cpp"
+		"src/game/*.*")
 
 add_subdirectory(engine)
 
